Add Bean soup with Pasta page

--- a/recipes/mushroom-risotto.html
+++ b/recipes/mushroom-risotto.html
@@ -10,5 +10,33 @@
     <h2>Description</h2>
     <p>Risotto is a comforting and flavorful dish. It is farly easy to make, you will only need a bit of patience, since you wil be standing in front of the stove stirring for a few minutes. It will be worthy tho, I promise!</p>
     <p>You can use any kind of mushrooms you like, usually Porcini mushrooms are used, but it really is up to your taste! Even fronzen ones are good if you are in hurry. In this recipe a easy homemade vegetable stock wiil be used, but any store bought will do, it makes the process a lot more quick and easy! </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Rice</li>
+        <li>Vegetable stock</li>
+        <li>Garlic</li>
+        <li>White wine</li>
+        <li>Porcini mushrooms</li>
+        <li>Olive oil</li>
+        <li>Butter</li>
+        <li>Parsley</li>
+        <li>Parmesan</li>
+        <li>Salt</li>
+        <li>Pepper</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Cut in half the garlic and put in a pan with the olive and fry it slightly for a minute;</li>
+        <li>Add the mushrooms, half the parsley, salt and pepper to taste. Let it cook for ten minutes and then put them aside;</li>
+        <li>Now add a little bit of olive oil in a pot and let it get hot;</li>
+        <li>Once the olive oil is hot put the rise in the pot and let it toast while stirring for a minute or two;</li>
+        <li>Add the wine and stir some more, until all the alcool has evaporated;</li>
+        <li>Now add the stock, just enough to cover the rice, and strir;</li>
+        <li>When the rice has assorbed a good amout of liquid add more. You will continue adding the stock little by little until its cooked, while stirring;</li>
+        <li>When the rice is half way done add the mushrooms;</li>
+        <li>Once the rice is cooked turn off the stove and let it sit for a minute, then add the butter and the parmesan and stir;</li>
+        <li>Adjust salt to taste, garnish the dish with some parsley and you're done!</li>
+
+    </ol>
 </body>
 </html>
