--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/mushroom-risotto.html">Mushroom Risotto</a>
+        <ul>
+        <li> <a href="recipes/mushroom-risotto.html">Mushroom Risotto</a></li>
+        <li> <a href="recipes/bean-soup-with-pasta.html">Bean Soup with Pasta</a></li>
+        </ul>
     </body>  
 </html>
