--- a/recipes/bean-soup-with-pasta.html
+++ b/recipes/bean-soup-with-pasta.html
@@ -5,7 +5,13 @@
     <title>Bean Soup With Pasta</title>
 </head>
 <body>
- 
-    
+    <h1>Bean Soup With Pasta</h1>
+    <img src="../images/beansoup.jpeg" alt="bean-soup-with-pasta">
+    <h2>Description</h2>
+    <p></p>
+    <h2>Ingredients</h2>
+    <ul></ul>
+    <h2>Steps</h2>
+    <ol></ol>
 </body>
 </html>
