Add paragraphs and lists

--- a/recipes/bean-soup-with-pasta.html
+++ b/recipes/bean-soup-with-pasta.html
@@ -8,10 +8,35 @@
     <h1>Bean Soup With Pasta</h1>
     <img src="../images/beansoup.jpeg" alt="bean-soup-with-pasta">
     <h2>Description</h2>
-    <p></p>
+     <p>This nourishing dish is easy and quick to make. It is a perfect option for a gloomy and rainy day, 
+        and it is perfect for vegeterians and vegans!</p>
+     <p>The main ingredients are beans and pasta. You can choose whatever kind of beans you like, 
+        in this recipe borlotti beans will be used. 
+        As for the pasta choose the shape that you like the most, but I higly reccomend using short pasta like Penne and not noodles. 
+        If you are not vegan add a little bit of parmesan cheese on top! </p>
     <h2>Ingredients</h2>
-    <ul></ul>
+     <ul>
+        <li>Celery</li>
+        <li>Carrot</li>
+        <li>Onion</li>
+        <li>Olive oil</li>
+        <li>Tomato paste</li>
+        <li>Beans</li>
+        <li>Water</li>
+        <li>Pasta</li>
+        <li>Salt</li>
+        <li>Pepper</li>
+     </ul>
     <h2>Steps</h2>
-    <ol></ol>
+     <ol>
+        <li>Mince the celery, carrot and onion;</li>
+        <li>Add the olive oil in a pot and add the minced vegetables. Let it cook for five minutes, stting occasionally;</li>
+        <li>Add the tomato paste and let it cook for 3 more minutes;</li>
+        <li>Put the cooked beans in the pot, stir everything and add salt and pepper to taste;</li>
+        <li>Add water, cover the pot until it comes to a boil and let it cook for at least ten minutes;</li>
+        <li>After the ten minutes add the pasta;</li>
+        <li>When the pasta is cooked, turn off the stove and let it sit for a few minutes;</li>
+        <li>Drizzle a little bit of olive oil an Parmesan cheese on top and done!</li>
+     </ol>
 </body>
 </html>
