--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
         <li> <a href="recipes/mushroom-risotto.html">Mushroom Risotto</a></li>
         <li> <a href="recipes/bean-soup-with-pasta.html">Bean Soup with Pasta</a></li>
+        <li> <a href="recipes/hot-chocolate.html">Hot Chocolate</a></li>
         </ul>
     </body>  
 </html>
