Add image in the Hot Cholate page

--- a/recipes/hot-chocolate.html
+++ b/recipes/hot-chocolate.html
@@ -5,8 +5,8 @@
     <title>Hot Chocolate</title>
 </head>
 <body>
-    <h1></h1>
-     <img src="">
+    <h1>Hot Chocolate</h1>
+     <img src="../images/hotchocolate.jpeg">
      <p></p>
     <h2></h2>
      <ul></ul>
