--- a/recipes/hot-chocolate.html
+++ b/recipes/hot-chocolate.html
@@ -7,10 +7,27 @@
 <body>
     <h1>Hot Chocolate</h1>
      <img src="../images/hotchocolate.jpeg">
-     <p></p>
-    <h2></h2>
-     <ul></ul>
-    <h2></h2>
-     <ol></ol>
+    <h2>Description</h2>
+     <p>Hot chocolate is the perfect cozy drink, for winter's cold days. 
+        This will be the recipe to make a perfect italian hot chocolate. What is the difference with a regular hot chocolate you ask? 
+        It is thick and creamy and it is usually eaten with a teaspoon. The best part is the whipped cream on top. 
+        You are going to love this!</p>
+    <h2>Ingredients</h2>
+     <ul>
+        <li>Cocoa powder</li>
+        <li>Cornstarch</li>
+        <li>Sugar</li>
+        <li>Vanilla sirup</li>
+        <li>Milk</li>
+        <li>whipped cream</li>
+     </ul>
+    <h2>Steps</h2>
+     <ol>
+        <li>In a pot mix the cocoa powder, sugar and cornstarch;</li>
+        <li>Add a little bit of milk and mix well (to prevent clumps);</li>
+        <li>Add all the milk and put in on the stove on low-medium heat and stir often;</li>
+        <li>When it stars to bubble, stir without stopping while it boils for four minutes;</li>
+        <li>Now serve it in a cup and put all the whipped cream your heart desires and done!</li>
+     </ol>
 </body>
 </html>
