Modify some parts of the text

--- a/recipes/hot-chocolate.html
+++ b/recipes/hot-chocolate.html
@@ -8,9 +8,10 @@
     <h1>Hot Chocolate</h1>
      <img src="../images/hotchocolate.jpeg">
     <h2>Description</h2>
-     <p>Hot chocolate is the perfect cozy drink, for winter's cold days. 
-        This will be the recipe to make a perfect italian hot chocolate. What is the difference with a regular hot chocolate you ask? 
-        It is thick and creamy and it is usually eaten with a teaspoon. The best part is the whipped cream on top. 
+     <p>Hot chocolate is the perfect cozy drink for winter's cold days. 
+        This recipe will show you how to make a perfect italian hot chocolate. 
+        What is the difference between a regular hot chocolate and an italian one you ask? 
+        The italian hot chocolate is thick and creamy and it is usually eaten with a teaspoon. The best part is the whipped cream on top. 
         You are going to love this!</p>
     <h2>Ingredients</h2>
      <ul>
@@ -24,7 +25,7 @@
     <h2>Steps</h2>
      <ol>
         <li>In a pot mix the cocoa powder, sugar and cornstarch;</li>
-        <li>Add a little bit of milk and mix well (to prevent clumps);</li>
+        <li>Add a little bit of milk, the vanilla syrup and mix well (to prevent clumps);</li>
         <li>Add all the milk and put in on the stove on low-medium heat and stir often;</li>
         <li>When it stars to bubble, stir without stopping while it boils for four minutes;</li>
         <li>Now serve it in a cup and put all the whipped cream your heart desires and done!</li>
