Add style.css and style the index page

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Odin recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-        <li> <a href="recipes/mushroom-risotto.html">Mushroom Risotto</a></li>
-        <li> <a href="recipes/bean-soup-with-pasta.html">Bean Soup with Pasta</a></li>
-        <li> <a href="recipes/hot-chocolate.html">Hot Chocolate</a></li>
+        <li class="recipe one"> <a href="recipes/mushroom-risotto.html">Mushroom Risotto</a></li>
+        <li class="recipe two"> <a href="recipes/bean-soup-with-pasta.html">Bean Soup with Pasta</a></li>
+        <li class="recipe three"> <a href="recipes/hot-chocolate.html">Hot Chocolate</a></li>
         </ul>
     </body>  
 </html>
