Add css style to the pages

--- a/recipes/bean-soup-with-pasta.html
+++ b/recipes/bean-soup-with-pasta.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Bean Soup With Pasta</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Bean Soup With Pasta</h1>
     <img src="../images/beansoup.jpeg" alt="bean-soup-with-pasta">
-    <h2>Description</h2>
+    <h2 class="header one">Description</h2>
      <p>This nourishing dish is easy and quick to make. It is a perfect option for a gloomy and rainy day, 
         and it is perfect for vegeterians and vegans!</p>
      <p>The main ingredients are beans and pasta. You can choose whatever kind of beans you like, 
         in this recipe borlotti beans will be used. 
         As for the pasta choose the shape that you like the most, but I higly reccomend using short pasta like Penne and not noodles. 
         If you are not vegan add a little bit of parmesan cheese on top! </p>
-    <h2>Ingredients</h2>
+    <h2 class="header two">Ingredients</h2>
      <ul>
         <li>Celery</li>
         <li>Carrot</li>
@@ -27,7 +28,7 @@
         <li>Salt</li>
         <li>Pepper</li>
      </ul>
-    <h2>Steps</h2>
+    <h2 class="header three">Steps</h2>
      <ol>
         <li>Mince the celery, carrot and onion;</li>
         <li>Add the olive oil in a pot and add the minced vegetables. Let it cook for five minutes, stting occasionally;</li>
