--- a/recipes/mushroom-risotto.html
+++ b/recipes/mushroom-risotto.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Mushroom Risotto</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Mushroom Risotto</h1>
     <img src="../images/mushroom-risotto.jpeg" alt="mushroom-risotto">
-    <h2>Description</h2>
+    <h2 class="header one">Description</h2>
      <p>Risotto is a comforting and flavorful dish. It is farly easy to make, you will only need a bit of patience, since you wil be standing in front of the stove stirring for a few minutes. It will be worthy tho, I promise!</p>
      <p>You can use any kind of mushrooms you like, usually Porcini mushrooms are used, but it really is up to your taste! Even fronzen ones are good if you are in hurry. In this recipe a easy homemade vegetable stock wiil be used, but any store bought will do, it makes the process a lot more quick and easy! </p>
-    <h2>Ingredients</h2>
+    <h2 class="header two">Ingredients</h2>
      <ul>
         <li>Rice</li>
         <li>Vegetable stock</li>
@@ -24,7 +25,7 @@
         <li>Salt</li>
         <li>Pepper</li>
      </ul>
-    <h2>Steps</h2>
+    <h2 class="header three">Steps</h2>
      <ol>
         <li>Cut in half the garlic and put in a pan with the olive and fry it slightly for a minute;</li>
         <li>Add the mushrooms, half the parsley, salt and pepper to taste. Let it cook for ten minutes and then put them aside;</li>
