--- a/recipes/hot-chocolate.html
+++ b/recipes/hot-chocolate.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Hot Chocolate</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hot Chocolate</h1>
      <img src="../images/hotchocolate.jpeg">
-    <h2>Description</h2>
+    <h2 class="header one">Description</h2>
      <p>Hot chocolate is the perfect cozy drink for winter's cold days. 
         This recipe will show you how to make a perfect italian hot chocolate. 
         What is the difference between a regular hot chocolate and an italian one you ask? 
         The italian hot chocolate is thick and creamy and it is usually eaten with a teaspoon. The best part is the whipped cream on top. 
         You are going to love this!</p>
-    <h2>Ingredients</h2>
+    <h2 class="header two">Ingredients</h2>
      <ul>
         <li>Cocoa powder</li>
         <li>Cornstarch</li>
@@ -22,7 +23,7 @@
         <li>Milk</li>
         <li>whipped cream</li>
      </ul>
-    <h2>Steps</h2>
+    <h2 class="header three">Steps</h2>
      <ol>
         <li>In a pot mix the cocoa powder, sugar and cornstarch;</li>
         <li>Add a little bit of milk, the vanilla syrup and mix well (to prevent clumps);</li>
